feat: task runners and sqs runner integration
